# otb

./: .env.example  AGENTS.md  CHANGELOG.md  PROMPT_CODEX_RELEASE.md  Patch  README.md  TASK.md  alembic.ini  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 20260314_0001_initial.py  20260314_0002_sync_queue.py
docs/: backlog.md  codex-launch-prompt.md  deployment.md  requirements.md  scope_v1.md
docs/adr/: 001-architecture.md  002-data-sync.md  003-release-strategy.md
docs/release-notes/: v1.0.0.md
scripts/: backup.py  build_windows.py  init_db.py  release_bundle.py  restore.py  seed.py
src/terra_testing/: __main__.py  main.py
src/terra_testing/app/: access.py  bootstrap.py  router.py  session_state.py
src/terra_testing/components/: app_shell.py  stat_card.py  sync_badge.py
src/terra_testing/config/: settings.py
src/terra_testing/db/: init_db.py  session.py
src/terra_testing/models/: __init__.py  answer.py  audit_log.py  question.py  role.py  schedule.py  sync_queue.py  system_setting.py  test_result.py  user.py
src/terra_testing/pages/: __init__.py  admin_dashboard_page.py  admin_results_page.py  audit_log_page.py  login_page.py  questions_management_page.py  (+8 more)
tests/: conftest.py  test_access.py  test_assignment_flow.py  test_audit.py  test_audit_export.py  test_auth.py  test_question_service.py  test_quiz.py  test_reports.py  test_result_filters.py  test_router.py  test_schedule_service.py  test_seed_baseline.py  test_settings_service.py  test_sync.py  test_sync_queue.py  test_sync_retry.py
(+20 files in other folders)
