[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terra-testing"
version = "1.0.0"
description = "Windows desktop knowledge testing system for Terra Engineering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Terra Engineering" }]
dependencies = [
  "flet>=0.28.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "passlib[bcrypt]>=1.7.4,<2.0",
  "bcrypt>=4.1,<5.0",
  "pymysql>=1.1,<2.0",
  "python-dotenv>=1.0,<2.0",
  "openpyxl>=3.1,<4.0",
  "reportlab>=4.0,<5.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-mock>=3.12,<4.0",
  "ruff>=0.11.0",
]
[project.scripts]
terra-testing = "terra_testing.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
